jsbachParser.py
# Generated from jsbach.g by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class jsbachParser ( Parser ):

    grammarFileName = "jsbach.g"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<-'", "'<?>'", "'<!>'", "'<<'", "'8<'", 
                     "'#'", "'='", "'/='", "'<'", "'>'", "'<='", "'>='", 
                     "'|:'", "':|'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'if'", "'while'", "'else'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<:>'", "'*'", "'/'", "'+'", 
                     "'-'", "'%'" ]

    symbolicNames = [ "<INVALID>", "ASSIGN", "READ", "WRITE", "ADD", "CUT", 
                      "SIZE", "EQ", "DIFF", "L", "G", "LEQ", "GEQ", "BEGIN", 
                      "END", "LP", "RP", "LB", "RB", "LC", "RC", "IF", "WHILE", 
                      "ELSE", "NOTE", "VAR", "PROCNAME", "NUM", "PLAY", 
                      "MULT", "DIV", "SUM", "RES", "MOD", "CADENA", "WS", 
                      "NL", "COMMENT" ]

    RULE_root = 0
    RULE_instructions = 1
    RULE_instruction = 2
    RULE_listInstructions = 3
    RULE_listAddElement = 4
    RULE_listCutElement = 5
    RULE_listGetElement = 6
    RULE_listSize = 7
    RULE_conditional = 8
    RULE_while_ = 9
    RULE_read = 10
    RULE_write = 11
    RULE_assign = 12
    RULE_play = 13
    RULE_list_ = 14
    RULE_procDef = 15
    RULE_proc = 16
    RULE_expr_bool = 17
    RULE_expr = 18

    ruleNames =  [ "root", "instructions", "instruction", "listInstructions", 
                   "listAddElement", "listCutElement", "listGetElement", 
                   "listSize", "conditional", "while_", "read", "write", 
                   "assign", "play", "list_", "procDef", "proc", "expr_bool", 
                   "expr" ]

    EOF = Token.EOF
    ASSIGN=1
    READ=2
    WRITE=3
    ADD=4
    CUT=5
    SIZE=6
    EQ=7
    DIFF=8
    L=9
    G=10
    LEQ=11
    GEQ=12
    BEGIN=13
    END=14
    LP=15
    RP=16
    LB=17
    RB=18
    LC=19
    RC=20
    IF=21
    WHILE=22
    ELSE=23
    NOTE=24
    VAR=25
    PROCNAME=26
    NUM=27
    PLAY=28
    MULT=29
    DIV=30
    SUM=31
    RES=32
    MOD=33
    CADENA=34
    WS=35
    NL=36
    COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jsbachParser.EOF, 0)

        def procDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ProcDefContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ProcDefContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = jsbachParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.procDef()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==jsbachParser.PROCNAME):
                    break

            self.state = 43
            self.match(jsbachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstructionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstructionContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstructionContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_instructions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstructions" ):
                return visitor.visitInstructions(self)
            else:
                return visitor.visitChildren(self)




    def instructions(self):

        localctx = jsbachParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instructions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.READ) | (1 << jsbachParser.WRITE) | (1 << jsbachParser.CUT) | (1 << jsbachParser.IF) | (1 << jsbachParser.WHILE) | (1 << jsbachParser.VAR) | (1 << jsbachParser.PROCNAME) | (1 << jsbachParser.PLAY))) != 0):
                self.state = 45
                self.instruction()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstructionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conditional(self):
            return self.getTypedRuleContext(jsbachParser.ConditionalContext,0)


        def while_(self):
            return self.getTypedRuleContext(jsbachParser.While_Context,0)


        def read(self):
            return self.getTypedRuleContext(jsbachParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(jsbachParser.WriteContext,0)


        def assign(self):
            return self.getTypedRuleContext(jsbachParser.AssignContext,0)


        def play(self):
            return self.getTypedRuleContext(jsbachParser.PlayContext,0)


        def proc(self):
            return self.getTypedRuleContext(jsbachParser.ProcContext,0)


        def listInstructions(self):
            return self.getTypedRuleContext(jsbachParser.ListInstructionsContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = jsbachParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jsbachParser.IF, jsbachParser.WHILE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jsbachParser.IF]:
                    self.state = 51
                    self.conditional()
                    pass
                elif token in [jsbachParser.WHILE]:
                    self.state = 52
                    self.while_()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            elif token in [jsbachParser.READ, jsbachParser.WRITE, jsbachParser.CUT, jsbachParser.VAR, jsbachParser.PROCNAME, jsbachParser.PLAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 55
                    self.read()
                    pass

                elif la_ == 2:
                    self.state = 56
                    self.write()
                    pass

                elif la_ == 3:
                    self.state = 57
                    self.assign()
                    pass

                elif la_ == 4:
                    self.state = 58
                    self.play()
                    pass

                elif la_ == 5:
                    self.state = 59
                    self.proc()
                    pass

                elif la_ == 6:
                    self.state = 60
                    self.listInstructions()
                    pass


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListInstructionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listAddElement(self):
            return self.getTypedRuleContext(jsbachParser.ListAddElementContext,0)


        def listCutElement(self):
            return self.getTypedRuleContext(jsbachParser.ListCutElementContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_listInstructions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListInstructions" ):
                return visitor.visitListInstructions(self)
            else:
                return visitor.visitChildren(self)




    def listInstructions(self):

        localctx = jsbachParser.ListInstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listInstructions)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jsbachParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.listAddElement()
                pass
            elif token in [jsbachParser.CUT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.listCutElement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListAddElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def ADD(self):
            return self.getToken(jsbachParser.ADD, 0)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_listAddElement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAddElement" ):
                return visitor.visitListAddElement(self)
            else:
                return visitor.visitChildren(self)




    def listAddElement(self):

        localctx = jsbachParser.ListAddElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listAddElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(jsbachParser.VAR)
            self.state = 70
            self.match(jsbachParser.ADD)
            self.state = 71
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListCutElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUT(self):
            return self.getToken(jsbachParser.CUT, 0)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def LC(self):
            return self.getToken(jsbachParser.LC, 0)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def RC(self):
            return self.getToken(jsbachParser.RC, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_listCutElement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCutElement" ):
                return visitor.visitListCutElement(self)
            else:
                return visitor.visitChildren(self)




    def listCutElement(self):

        localctx = jsbachParser.ListCutElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listCutElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(jsbachParser.CUT)
            self.state = 74
            self.match(jsbachParser.VAR)
            self.state = 75
            self.match(jsbachParser.LC)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(jsbachParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListGetElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def LC(self):
            return self.getToken(jsbachParser.LC, 0)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def RC(self):
            return self.getToken(jsbachParser.RC, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_listGetElement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListGetElement" ):
                return visitor.visitListGetElement(self)
            else:
                return visitor.visitChildren(self)




    def listGetElement(self):

        localctx = jsbachParser.ListGetElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listGetElement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(jsbachParser.VAR)
            self.state = 80
            self.match(jsbachParser.LC)
            self.state = 81
            self.expr(0)
            self.state = 82
            self.match(jsbachParser.RC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListSizeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIZE(self):
            return self.getToken(jsbachParser.SIZE, 0)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_listSize

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListSize" ):
                return visitor.visitListSize(self)
            else:
                return visitor.visitChildren(self)




    def listSize(self):

        localctx = jsbachParser.ListSizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_listSize)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(jsbachParser.SIZE)
            self.state = 85
            self.match(jsbachParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(jsbachParser.IF, 0)

        def expr_bool(self):
            return self.getTypedRuleContext(jsbachParser.Expr_boolContext,0)


        def BEGIN(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.BEGIN)
            else:
                return self.getToken(jsbachParser.BEGIN, i)

        def instructions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstructionsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstructionsContext,i)


        def END(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.END)
            else:
                return self.getToken(jsbachParser.END, i)

        def ELSE(self):
            return self.getToken(jsbachParser.ELSE, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_conditional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = jsbachParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(jsbachParser.IF)
            self.state = 88
            self.expr_bool()
            self.state = 89
            self.match(jsbachParser.BEGIN)
            self.state = 90
            self.instructions()
            self.state = 91
            self.match(jsbachParser.END)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jsbachParser.ELSE:
                self.state = 92
                self.match(jsbachParser.ELSE)
                self.state = 93
                self.match(jsbachParser.BEGIN)
                self.state = 94
                self.instructions()
                self.state = 95
                self.match(jsbachParser.END)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class While_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(jsbachParser.WHILE, 0)

        def expr_bool(self):
            return self.getTypedRuleContext(jsbachParser.Expr_boolContext,0)


        def BEGIN(self):
            return self.getToken(jsbachParser.BEGIN, 0)

        def instructions(self):
            return self.getTypedRuleContext(jsbachParser.InstructionsContext,0)


        def END(self):
            return self.getToken(jsbachParser.END, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_while_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_" ):
                return visitor.visitWhile_(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = jsbachParser.While_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(jsbachParser.WHILE)
            self.state = 100
            self.expr_bool()
            self.state = 101
            self.match(jsbachParser.BEGIN)
            self.state = 102
            self.instructions()
            self.state = 103
            self.match(jsbachParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(jsbachParser.READ, 0)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_read

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)




    def read(self):

        localctx = jsbachParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(jsbachParser.READ)
            self.state = 106
            self.match(jsbachParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WriteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(jsbachParser.WRITE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)


        def CADENA(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.CADENA)
            else:
                return self.getToken(jsbachParser.CADENA, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_write

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = jsbachParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(jsbachParser.WRITE)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 111
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [jsbachParser.SIZE, jsbachParser.LP, jsbachParser.NOTE, jsbachParser.VAR, jsbachParser.NUM]:
                        self.state = 109
                        self.expr(0)
                        pass
                    elif token in [jsbachParser.CADENA]:
                        self.state = 110
                        self.match(jsbachParser.CADENA)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(jsbachParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def list_(self):
            return self.getTypedRuleContext(jsbachParser.List_Context,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = jsbachParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(jsbachParser.VAR)
            self.state = 117
            self.match(jsbachParser.ASSIGN)
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jsbachParser.SIZE, jsbachParser.LP, jsbachParser.NOTE, jsbachParser.VAR, jsbachParser.NUM]:
                self.state = 118
                self.expr(0)
                pass
            elif token in [jsbachParser.LB]:
                self.state = 119
                self.list_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jsbachParser.RULE_play

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PlayListContext(PlayContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.PlayContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PLAY(self):
            return self.getToken(jsbachParser.PLAY, 0)
        def list_(self):
            return self.getTypedRuleContext(jsbachParser.List_Context,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlayList" ):
                return visitor.visitPlayList(self)
            else:
                return visitor.visitChildren(self)


    class PlayNoteVarContext(PlayContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.PlayContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PLAY(self):
            return self.getToken(jsbachParser.PLAY, 0)
        def NOTE(self):
            return self.getToken(jsbachParser.NOTE, 0)
        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlayNoteVar" ):
                return visitor.visitPlayNoteVar(self)
            else:
                return visitor.visitChildren(self)



    def play(self):

        localctx = jsbachParser.PlayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_play)
        self._la = 0 # Token type
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = jsbachParser.PlayListContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(jsbachParser.PLAY)
                self.state = 123
                self.list_()
                pass

            elif la_ == 2:
                localctx = jsbachParser.PlayNoteVarContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(jsbachParser.PLAY)
                self.state = 125
                _la = self._input.LA(1)
                if not(_la==jsbachParser.NOTE or _la==jsbachParser.VAR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(jsbachParser.LB, 0)

        def RB(self):
            return self.getToken(jsbachParser.RB, 0)

        def NOTE(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.NOTE)
            else:
                return self.getToken(jsbachParser.NOTE, i)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.NUM)
            else:
                return self.getToken(jsbachParser.NUM, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_list_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_" ):
                return visitor.visitList_(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = jsbachParser.List_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_list_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(jsbachParser.LB)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.NOTE or _la==jsbachParser.NUM:
                self.state = 129
                _la = self._input.LA(1)
                if not(_la==jsbachParser.NOTE or _la==jsbachParser.NUM):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(jsbachParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(jsbachParser.PROCNAME, 0)

        def BEGIN(self):
            return self.getToken(jsbachParser.BEGIN, 0)

        def instructions(self):
            return self.getTypedRuleContext(jsbachParser.InstructionsContext,0)


        def END(self):
            return self.getToken(jsbachParser.END, 0)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.VAR)
            else:
                return self.getToken(jsbachParser.VAR, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_procDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcDef" ):
                return visitor.visitProcDef(self)
            else:
                return visitor.visitChildren(self)




    def procDef(self):

        localctx = jsbachParser.ProcDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_procDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(jsbachParser.PROCNAME)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.VAR:
                self.state = 138
                self.match(jsbachParser.VAR)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(jsbachParser.BEGIN)
            self.state = 145
            self.instructions()
            self.state = 146
            self.match(jsbachParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(jsbachParser.PROCNAME, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)

